working on the overlap issue on mobile in the project section

--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,8 @@ p {
   --fs-3: 1.35rem;
   /* captioning */
   --fs-1: 1rem;
+  
+ 
   }
   /* icon adjustments */
   /* star */
@@ -305,11 +307,13 @@ p {
   .project-div{
     width: 100%;
     height: 40vh;
+    min-height: 350px;
+    max-height: 500px;
     margin-bottom: var(--section-gap)
   }
   .project-img{
-    height: 20vh;
-    min-height: 300px;
+    height: 30vh;
+    /* min-height: 300px; */
     max-height: 400px;
   }
   .project-text{
